--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,7 @@ uvicorn = "^0.34.2"
 python-multipart = "^0.0.20"
 werkzeug = "^3.1.3"
 jinja2 = "^3.1.6"
+python-dotenv = "^1.1.0"
 
 [tool.poetry]
 package-mode = false
