--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
       - ytdl
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.ytdl.rule=(Host(`${HOST}`))"
-      - "traefik.http.routers.ytdl.entrypoints=websecure"
-      - "traefik.http.routers.ytdl.tls.certresolver=myresolver"
+      - "traefik.http.routers.ytdl-frontend.rule=(Host(`${HOST}`))"
+      - "traefik.http.routers.ytdl-frontend.entrypoints=websecure"
+      - "traefik.http.routers.ytdl-frontend.tls.certresolver=myresolver"
 
   backend:
     build:
@@ -19,9 +19,9 @@ services:
       - ytdl
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.ytdl.rule=(Host(`${HOST}`) && PathPrefix(`/api`))"
-      - "traefik.http.routers.ytdl.entrypoints=websecure"
-      - "traefik.http.routers.ytdl.tls.certresolver=myresolver"
+      - "traefik.http.routers.ytdl-backend.rule=(Host(`${HOST}`) && PathPrefix(`/api`))"
+      - "traefik.http.routers.ytdl-backend.entrypoints=websecure"
+      - "traefik.http.routers.ytdl-backend.tls.certresolver=myresolver"
 
 networks:
   ytdl:
