--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,15 @@
 ALLOW_ORIGIN="example.com"
+
+# download media output folder
 MEDIA_FOLDER="./media"
+# user db
+DATABASE_URL="sqlite:///./database.db"
+
+# auth config
+# python -c "import secrets; print(secrets.token_hex(32))"
+SECRET_KEY="your-secret-key"
+ALGORITHM="HS256"
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+# default user
+USERNAME="admin"
+PASSWORD="admin"
