--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,10 @@ python-multipart = "^0.0.20"
 werkzeug = "^3.1.3"
 jinja2 = "^3.1.6"
 python-dotenv = "^1.1.0"
+sqlalchemy = "^2.0.41"
+pyjwt = "^2.10.1"
+passlib = "^1.7.4"
+bcrypt = "4.0.1"
 
 [tool.poetry]
 package-mode = false
