added cookies and command constructor

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,3 +13,6 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 # default user
 USERNAME="admin"
 PASSWORD="admin"
+# other
+FFMPEG_PATH="./utils/"
+COOKIES_PATH="./cookies.txt"
